@@ -30,6 +30,10 @@
 			<column width="30%" align="left" />
 		</columns>
 		<rows>
+			<row spans="1,3">
+				<label value="Query:" />
+				<label value="@{resultMlt.result.request.query}" />
+			</row>
 			<row>
 				<label value="Document(s) found:" />
 				<label value="@{resultMlt.result.numFound}" />
