@@ -1,0 +1,51 @@
+<!--
+	License Agreement for OpenSearchServer
+	Copyright (C) 2012 Emmanuel Keller / Jaeksoft
+	http://www.open-search-server.com
+	This file is part of OpenSearchServer.
+	OpenSearchServer is free software: you can
+	redistribute it and/or modify it under the terms of the GNU General
+	Public License as published by the Free Software Foundation, either
+	version 3 of the License, or (at your option) any later version.
+	OpenSearchServer is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+	General Public License for more details. You should have received a
+	copy of the GNU General Public License along with OpenSearchServer.
+	If not, see <http://www.gnu.org/licenses/>.
+-->
+<window id="mlt"
+	use="com.jaeksoft.searchlib.web.controller.query.MoreLikeThisController">
+	<grid>
+		<columns>
+			<column align="right" hflex="min" />
+			<column align="left" />
+		</columns>
+		<rows>
+			<row>
+				<label value="Minimum word length: " />
+				<intbox value="@{mlt.request.minWordLen}" />
+			</row>
+			<row>
+				<label value="Maximum word length: " />
+				<intbox value="@{mlt.request.maxWordLen}" />
+			</row>
+			<row>
+				<label value="Minimum document frequency: " />
+				<intbox value="@{mlt.request.minDocFreq}" />
+			</row>
+			<row>
+				<label value="Minimum term frequency: " />
+				<intbox value="@{mlt.request.minTermFreq}" />
+			</row>
+			<row>
+				<label value="Maximum query terms: " />
+				<intbox value="@{mlt.request.maxQueryTerms}" />
+			</row>
+			<row>
+				<label value="Maximum number of tokens parsed: " />
+				<intbox value="@{mlt.request.maxNumTokensParsed}" />
+			</row>
+		</rows>
+	</grid>
+</window>
